--- a/style.css
+++ b/style.css
@@ -1,6 +1,29 @@
 body {
 	margin-right: 25%;
 	margin-left: 25%;
+	margin-bottom: 5%;
 	font-family: Calibri;
 	background-color: #F5F5F5;
+}
+
+td {
+	text-align: center;
+	vertical-align: middle;
+	background-color: white;
+	height: 50px;
+	width: 50px;
+}
+
+table {
+	border: 1px solid black;
+	border-collapse: collapse;
+	width: 100%;
+	background-color: white;
+}
+
+.center {
+	display: block;
+  	margin-left: auto;
+  	margin-right: auto;
+  	width: 50%;
 }
