--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,19 @@
 body {
-	margin-right: 25%;
-	margin-left: 25%;
+	margin-right: 20%;
+	margin-left: 20%;
 	margin-bottom: 5%;
+	margin-top: 2%;
 	font-family: Calibri;
 	background-color: #F5F5F5;
+	padding: 30px;
+    box-shadow:
+  		0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  		0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+  		0 12.5px 10px rgba(0, 0, 0, 0.06),
+  		0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+  		0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  		0 100px 80px rgba(0, 0, 0, 0.12);
+  	border-radius: 5px;
 }
 
 td {
@@ -17,6 +27,7 @@ td {
 table {
 	border: 1px solid black;
 	border-left: 4px solid #000;
+	border-radius: 5px;
 	width: 100%;
 	background-color: white;
 }
@@ -28,6 +39,38 @@ table {
   	width: 50%;
 }
 
-h2 {
+h2, footer {
 	text-align: center;
+}
+
+/* The title */
+h1, h2 { 
+	color: #111; 
+	font-family: 'Helvetica Neue', sans-serif; 
+	font-size: 24px; 
+	font-weight: bold; 
+	letter-spacing: -1px; 
+	line-height: 1; 
+	text-align: center;
+	padding: 10px;
+}
+
+/* New topnav menu */
+.topnav {
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.topnav a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 10px 10px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
