--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,17 @@
+/* CSS Stylesheet */
+
+/* Body design */
 body {
 	margin-right: 20%;
 	margin-left: 20%;
 	margin-bottom: 5%;
 	margin-top: 2%;
+	padding: 30px;
 	font-family: Calibri;
 	background-color: #F5F5F5;
-	padding: 30px;
-    box-shadow:
-  		0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-  		0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-  		0 12.5px 10px rgba(0, 0, 0, 0.06),
-  		0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-  		0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-  		0 100px 80px rgba(0, 0, 0, 0.12);
-  	border-radius: 5px;
 }
 
+/* Table design */
 td {
 	text-align: center;
 	vertical-align: middle;
@@ -30,8 +26,16 @@ table {
 	border-radius: 5px;
 	width: 100%;
 	background-color: white;
+		box-shadow:
+  		0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  		0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+  		0 12.5px 10px rgba(0, 0, 0, 0.06),
+  		0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+  		0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  		0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
+/* Icons design */
 .center {
 	display: block;
   	margin-left: auto;
@@ -40,13 +44,8 @@ table {
   	height: 35px;
 }
 
-h2, footer {
-	text-align: center;
-}
-
 /* The title */
-h1, h2 { 
-	color: #111; 
+h1, h2 {
 	font-family: 'Helvetica Neue', sans-serif; 
 	font-size: 24px; 
 	font-weight: bold; 
