--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,11 @@ table {
   	height: 35px;
 }
 
+/* Paragraph center */
+.centre {
+	text-align: center;
+}
+
 /* The title */
 h1, h2 {
 	font-family: 'Helvetica Neue', sans-serif; 
@@ -68,6 +73,61 @@ h1, h2 {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: red;
+  color: white;
+}
+
+/* New dropdown menu */
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  padding: 10px 10px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+  color:  white;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 18%;
+  z-index: 1;
+}
+
+.dropdown-content li {
+  float: none;
   color: black;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
