--- a/styles/style.css
+++ b/styles/style.css
@@ -13,10 +13,9 @@ body {
 /* Table design */
 td {
 	text-align: center;
-	vertical-align: middle;
+	width: 33%;
 	background-color: white;
-	height: 50px;
-	width: 50px;
+	padding: 10px;
 }
 
 table {
@@ -25,13 +24,6 @@ table {
 	border-radius: 3px;
 	width: 100%;
 	background-color: white;
-		box-shadow:
-  		0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-  		0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-  		0 12.5px 10px rgba(0, 0, 0, 0.06),
-  		0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-  		0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-  		0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
 /* Icons design */
@@ -77,11 +69,13 @@ h2 {
   padding: 10px 10px;
   text-decoration: none;
   font-size: 16px;
+  border-radius: 3px;
 }
 
 .topnav a:hover {
   background-color: red;
   color: white;
+  border-radius: 3px;
 }
 
 /* New dropdown menu */
@@ -97,11 +91,13 @@ h2 {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  border-radius: 3px;
 }
 
 .dropdown {
   float: left;
   overflow: hidden;
+  border-radius: 3px;
 }
 
 .dropdown .dropbtn {
@@ -112,11 +108,13 @@ h2 {
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  border-radius: 3px;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: red;
   color:  white;
+  border-radius: 3px;
 }
 
 .dropdown-content {
@@ -133,8 +131,10 @@ h2 {
   text-decoration: none;
   display: block;
   text-align: left;
+  border-radius: 3px;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+  border-radius: 3px;
 }
