--- a/styles/style.css
+++ b/styles/style.css
@@ -4,10 +4,21 @@
 body {
 	margin-right: 20%;
 	margin-left: 20%;
-	margin-bottom: 5%;
+	margin-bottom: 2%;
 	padding: 0 15px 15px 15px;
 	font-family: Calibri;
-	background-color: #F5F5F5;
+	background-image: url("https://i.imgur.com/BUgyPi5.png");
+}
+
+/* DIVs body and footer background color */
+.color-change {
+	background-color: #fdfff5;
+}
+
+.footer {
+	background-color: #343434;
+	padding: 30px;
+	border-radius: 3px;
 }
 
 /* Table design */
@@ -52,7 +63,7 @@ h1, h2 {
 h2 {
 	background-image: url("https://i.imgur.com/HLkImVW.jpeg");
 	background-size: cover;
-	padding: 50px;
+	padding: 60px;
 	border-radius: 3px;
 	color: white;
 }
@@ -120,7 +131,7 @@ h2 {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: white;
   width: 18%;
   z-index: 1;
 }
