--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,15 @@ table {
 /* The title */
 h1, h2 {
 	font-family: 'Helvetica Neue', sans-serif; 
-	font-size: 24px; 
+	font-size: 26px; 
+	font-weight: bold; 
+	letter-spacing: -1px; 
+	line-height: 1; 
+	text-align: center;
+}
+
+h3 {
+	font-family: 'Helvetica Neue', sans-serif; 
 	font-weight: bold; 
 	letter-spacing: -1px; 
 	line-height: 1; 
