--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,8 @@ body {
 	margin-left: 20%;
 	margin-bottom: 2%;
 	padding: 0 15px 15px 15px;
-	font-family: Calibri;
 	background-image: url("https://i.imgur.com/BUgyPi5.png");
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
 /* DIVs body and footer background color */
@@ -22,6 +22,9 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-image: url(https://cdn.pixabay.com/photo/2016/07/19/04/40/moon-1527501_960_720.jpg);
+	background-position: center;
+	background-size: cover;
 }
 
 /* Footer columns */
