--- a/styles/style.css
+++ b/styles/style.css
@@ -17,19 +17,21 @@ body {
 
 .footer {
 	background-color: #353839;
-  padding: 40px;
-	border-radius: 3px;
+  padding: 60px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	background-image: url(https://cdn.pixabay.com/photo/2016/07/19/04/40/moon-1527501_960_720.jpg);
 	background-position: center;
 	background-size: cover;
+	border-radius: 0px 0px 3px 3px;
 }
 
 /* Footer columns */
 .footer-left {
+	text-align: left;
 	float: left;
+	color: white;
 	width: 50%;
 	margin: auto;
 }
@@ -39,6 +41,14 @@ body {
 	float: right;
 	color: white;
 	width: 50%;
+	margin: auto;
+}
+
+/* Signature */
+.paragraph-footer-left {
+	text-align: center;
+	float: left;
+	color: white;
 	margin: auto;
 }
 
@@ -57,7 +67,6 @@ table {
 	width: 100%;
 	background-color: white;
 }
-
 
 /* Table The Road */
 table.table-the-road {
@@ -102,7 +111,7 @@ h2 {
 	background-image: url("https://i.imgur.com/HLkImVW.jpeg");
 	background-size: cover;
 	padding: 60px;
-	border-radius: 3px;
+	border-radius: 3px 3px 0px 0px;
 	color: white;
 }
 
