index.html + style.css + Image

--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,7 @@ h3 {
 
 /* H2 with background picture */
 h2 {
-	background-image: url("https://i.imgur.com/HLkImVW.jpeg");
+	background-image: url("https://i.imgur.com/xJFPxCC.jpg");
 	background-size: cover;
 	padding: 60px;
 	border-radius: 3px 3px 0px 0px;
